# CU_Project3

./: .env.example  .gitignore  README.md  answers.md  pyproject.toml  task.ipynb  tests.py
app/: __main__.py  bot.py  config.py  web.py
app/templates/: error.html  index.html  route_weather.html
