[tool.poetry]
name = "cu-project3"
version = "0.1.0"
description = ""
authors = ["Rodion Gudz <rodion.gudz@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
flask = "^3.0.3"
aiogram = "2.9"
plotly = "^5.24.1"
dash = "^2.18.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
dash-bootstrap-components = "^1.6.0"
folium = "^0.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
